--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Webpack Sample Project</title>
+    <link href="style.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
 <div id='root'>
